// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pivot /> when a PivotItem is given an itemCount matches its snapshot 1`] = `
<StyledPivotBase
  className="y-pivot"
  headersOnly={true}
  onLinkClick={[Function]}
  selectedKey="1"
>
  <PivotItem
    headerText="Tab 4"
    itemCount={15}
    itemKey="4"
    key="4"
  />
</StyledPivotBase>
`;

exports[`<Pivot /> when given a className matches its snapshot 1`] = `
<StyledPivotBase
  className="y-pivot Test"
  headersOnly={true}
  linkSize={0}
  onLinkClick={[Function]}
  selectedKey="1"
>
  <PivotItem
    ariaLabel="test"
    headerText="Tab 1"
    itemKey="1"
    key="1"
  />
  <PivotItem
    headerText="Tab 2"
    itemKey="2"
    key="2"
  />
  <PivotItem
    headerText="Tab 3"
    itemKey="3"
    key="3"
  />
</StyledPivotBase>
`;

exports[`<Pivot /> with default options matches its snapshot 1`] = `
<StyledPivotBase
  className="y-pivot"
  headersOnly={true}
  linkSize={0}
  onLinkClick={[Function]}
  selectedKey="1"
>
  <PivotItem
    ariaLabel="test"
    headerText="Tab 1"
    itemKey="1"
    key="1"
  />
  <PivotItem
    headerText="Tab 2"
    itemKey="2"
    key="2"
  />
  <PivotItem
    headerText="Tab 3"
    itemKey="3"
    key="3"
  />
</StyledPivotBase>
`;

exports[`<Pivot /> with large pivot items matches its snapshot 1`] = `
<StyledPivotBase
  className="y-pivot"
  headersOnly={true}
  linkSize={1}
  onLinkClick={[Function]}
  selectedKey="1"
>
  <PivotItem
    ariaLabel="test"
    headerText="Tab 1"
    itemKey="1"
    key="1"
  />
  <PivotItem
    headerText="Tab 2"
    itemKey="2"
    key="2"
  />
  <PivotItem
    headerText="Tab 3"
    itemKey="3"
    key="3"
  />
</StyledPivotBase>
`;

exports[`<Pivot /> with overDarkBackground as true matches its snapshot 1`] = `
<StyledPivotBase
  className="y-pivot y-pivot__overDarkBackground"
  headersOnly={true}
  linkSize={0}
  onLinkClick={[Function]}
  selectedKey="1"
>
  <PivotItem
    ariaLabel="test"
    headerText="Tab 1"
    itemKey="1"
    key="1"
  />
  <PivotItem
    headerText="Tab 2"
    itemKey="2"
    key="2"
  />
  <PivotItem
    headerText="Tab 3"
    itemKey="3"
    key="3"
  />
</StyledPivotBase>
`;
